# Backend/src/v1/swagger.json
@@ -92,6 +92,24 @@
                 }
             }
         },
+        "/auth/": {
+            "get": {
+                "tags": [
+                    "Auth User"
+                ],
+                "summary": "Listar usuarios",
+                "description": "",
+                "consumes": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "lista de usuarios",
+                        "$ref": "#/definitions/User"
+                    }
+                }
+            }
+        },
         "/book/createBook": {
             "post": {
                 "tags": [
@@ -128,55 +146,55 @@
         },
         "/book": {
             "get": {
-              "tags": [
-                "Books Manager"
-              ],
-              "summary": "Listar libros",
-              "description": "",
-              "consumes": [
-                "application/json"
-              ],
-              "produces": [
-                "application/json"
-              ],
-              "parameters": [
-                {
-                  "name": "page",
-                  "in": "query",
-                  "description": "Número de página a recuperar",
-                  "required": false,
-                  "type": "integer",
-                  "format": "int64",
-                  "minimum": 0
-                },
-                {
-                  "name": "size",
-                  "in": "query",
-                  "description": "Tamaño de página",
-                  "required": false,
-                  "type": "integer",
-                  "format": "int64",
-                  "minimum": 1,
-                  "maximum": 100
-                },
-                {
-                  "name": "search",
-                  "in": "query",
-                  "description": "Búsqueda por título o autor",
-                  "required": false,
-                  "type": "string"
+                "tags": [
+                    "Books Manager"
+                ],
+                "summary": "Listar libros",
+                "description": "",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Número de página a recuperar",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "minimum": 0
+                    },
+                    {
+                        "name": "size",
+                        "in": "query",
+                        "description": "Tamaño de página",
+                        "required": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "minimum": 1,
+                        "maximum": 100
+                    },
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "description": "Búsqueda por título o autor",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Listado de libros"
+                    },
+                    "500": {
+                        "description": "Error del servidor"
+                    }
                 }
-              ],
-              "responses": {
-                "200": {
-                  "description": "Listado de libros"
-                },
-                "500": {
-                  "description": "Error del servidor"
-                }
-              }
             }
-          },          
+        },
         "/book/{id}": {
             "get": {
                 "tags": [
